# rust-zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/: rust.yml
.github/workflows/: audit-on-push.yml  rust.yml
configuration/: base.yaml  production.yaml
migrations/: 20211017101804_create_subscriptions_table.sql  20211216130122_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
