[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ibrahim Alhamad <ialhamad@duck.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.9"
config = "0.11.0"
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
	"runtime-actix-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
	"offline",
]


[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
